--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer disable-pan disable-zoom src="glbTest.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" min-camera-orbit="auto 0deg 7.898m" max-camera-orbit="auto 76deg auto" min-field-of-view="4.493deg" camera-orbit="-30.92deg 38.99deg auto">
+    <model-viewer disable-pan src="glbTest.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1" min-camera-orbit="auto 0deg 7.898m" max-camera-orbit="auto 76deg auto" min-field-of-view="4.493deg" camera-orbit="-30.92deg 38.99deg auto">
       <div class="progress-bar hide" slot="progress-bar" >
           <div class="update-bar"></div>
       </div>
